Updated About and Bio

--- a/about.html
+++ b/about.html
@@ -150,41 +150,56 @@
 	done, with what software and hardware we have at our disposal.</div></font>
 <br>
 		<figure>
-			<img src="images/chris-bio.jpg" height="200">
-			<figcaption><font color="gold"><div style="font-size:50%">Chris McGimpsey-Jones</div></font></figcaption>
-			<figcaption><font color="gold"><div style="font-size:50%">(Founder)</div></font></figcaption>
+			<img src="images/cockpit-admin.webp" width="800">
+			<figcaption><font color="gold"><div style="font-size:50%">System administration running Cockpit</div></font></figcaption>
 		</figure>
 		<figure>
-			<img src="images/Core.jpg" width="200">
-			<figcaption><font color="gold"><div style="font-size:50%">Core</div></font></figcaption>
-			<figcaption><font color="gold"><div style="font-size:50%">(Tumbleweed)</div></font></figcaption>
+			<img src="images/ipfire-admin.webp" width="800">
+			<figcaption><font color="gold"><div style="font-size:50%">Level 1 firewall running IPFire, inside VirtualBox</div></font></figcaption>
 		</figure>
 		<figure>
-			<img src="images/Mainframe.jpg" width="200">
-			<figcaption><font color="gold"><div style="font-size:50%">Mainframe</div></font></figcaption>
-			<figcaption><font color="gold"><div style="font-size:50%">(Tumbleweed)</div></font></figcaption>
+			<img src="images/untangle-admin.webp" width="800">
+			<figcaption><font color="gold"><div style="font-size:50%">Level 2 firewall running Untangle, inside VirtualBox</div></font></figcaption>
 		</figure>
 		<figure>
-			<img src="images/CMDC-Sysadmin.jpg" width="200">
-			<figcaption><font color="gold"><div style="font-size:50%">CMDC System Administration</div></font></figcaption>
-			<figcaption><font color="gold"><div style="font-size:50%">(Fedora 35 Workstation)</div></font></figcaption>
+			<img src="images/pfsense-admin.webp" width="800">
+			<figcaption><font color="gold"><div style="font-size:50%">Level 3 firewall running pfSense, inside VirtualBox</div></font></figcaption>
 		</figure>
 		<figure>
-			<img src="images/CMDC-Mining.jpg" height="200">
-			<figcaption><font color="gold"><div style="font-size:50%">CMDC Mining Servers</div></font></figcaption>
-			<figcaption><font color="gold"><div style="font-size:50%">(Ubuntu Server 21.10)</div></font></figcaption>
+			<img src="images/pihole-admin.webp" width="800">
+			<figcaption><font color="gold"><div style="font-size:50%">Primary DNS running Pi-hole w/ level 1 filter+redundency</div></font></figcaption>
 		</figure>
 		<figure>
-			<img src="images/CMDC-Gobblechain-Blockserver.jpg" width="200">
-			<figcaption><font color="gold"><div style="font-size:50%">Gobble Chain [Private blockchain]<br>
-			(Ubuntu Server 21.10)<br>
-			+<br>
-			CMDC block Server<br>
-			(Windows Server)</div></font></figcaption>
+			<img src="images/technitium-admin.webp" width="800">
+			<figcaption><font color="gold"><div style="font-size:50%">Secondary DNS running Technitium w/ level 2 filter</div></font></figcaption>
 		</figure>
 		<figure>
-			<img src="images/Office.jpg" width="200">
-			<figcaption><font color="gold"><div style="font-size:50%">Office</div></font></figcaption>
+			<img src="images/zeroshell-admin.webp" width="800">
+			<figcaption><font color="gold"><div style="font-size:50%">Unfiltered DNS Forwarder running ZeroShell</div></font></figcaption>
+		</figure>
+		<figure>
+			<img src="images/smokeping-1-admin.webp" width="800">
+			<figcaption><font color="gold"><div style="font-size:50%">Internal network latency monitor running Smokeping</div></font></figcaption>
+		</figure>
+		<figure>
+			<img src="images/smokeping-2-admin.webp" width="800">
+			<figcaption><font color="gold"><div style="font-size:50%">&nbsp;</div></font></figcaption>
+		</figure>
+		<figure>
+			<img src="images/smokeping-3-admin.webp" width="800">
+			<figcaption><font color="gold"><div style="font-size:50%">External DNS latency monitor running Smokeping</div></font></figcaption>
+		</figure>
+		<figure>
+			<img src="images/cmdc-system-stack.webp" height="800">
+			<figcaption><font color="gold"><div style="font-size:50%">CMDC+Gobble blockchain system stack</div></font></figcaption>
+		</figure>
+		<figure>
+			<img src="images/cmdc-miner-admin.webp" width="800">
+			<figcaption><font color="gold"><div style="font-size:50%">CMDC mining server administration running Webmin</div></font></figcaption>
+		</figure>
+		<figure>
+			<img src="images/cmdc-block-admin.webp" width="800">
+			<figcaption><font color="gold"><div style="font-size:50%">CMDC block server monitoring</div></font></figcaption>
 		</figure>
 <br>
 	<font color="gold"><div align="left" style="font-size:50%">Most of our infrastructure is built from a combination of laptops and recycled 
