Fixed random typos

--- a/about.html
+++ b/about.html
@@ -167,7 +167,7 @@
 		</figure>
 		<figure>
 			<img src="images/pihole-admin.webp" width="800">
-			<figcaption><font color="gold"><div style="font-size:50%">Primary DNS running Pi-hole w/ level 1 filter+redundency</div></font></figcaption>
+			<figcaption><font color="gold"><div style="font-size:50%">Primary DNS running Pi-hole w/ level 1 filter+redundancy</div></font></figcaption>
 		</figure>
 		<figure>
 			<img src="images/technitium-admin.webp" width="800">
@@ -179,7 +179,7 @@
 		</figure>
 		<figure>
 			<img src="images/smokeping-1-admin.webp" width="800">
-			<figcaption><font color="gold"><div style="font-size:50%">Internal network latency monitor running Smokeping</div></font></figcaption>
+			<figcaption><font color="gold"><div style="font-size:50%">Internal network latency monitor running SmokePing</div></font></figcaption>
 		</figure>
 		<figure>
 			<img src="images/smokeping-2-admin.webp" width="800">
@@ -187,7 +187,7 @@
 		</figure>
 		<figure>
 			<img src="images/smokeping-3-admin.webp" width="800">
-			<figcaption><font color="gold"><div style="font-size:50%">External DNS latency monitor running Smokeping</div></font></figcaption>
+			<figcaption><font color="gold"><div style="font-size:50%">External DNS latency monitor running SmokePing</div></font></figcaption>
 		</figure>
 		<figure>
 			<img src="images/cmdc-system-stack.webp" height="800">
