--- a/chris-mcgimpsey-jones.html
+++ b/chris-mcgimpsey-jones.html
@@ -4,6 +4,8 @@
 	<!-- Site version 2.4.3 \./ -->
 
 <head>
+<script src="https://platform.linkedin.com/badges/js/profile.js" async defer type="text/javascript"></script>
+
 <title>Harmonious Platform Systems - Chris McGimpsey-Jones</title>
 
 <style>
@@ -110,9 +112,8 @@
 	encryption and infosec.</div></font>
 	<font color="gold"><div align="left" style="font-size:50%">Other than than, I generally just poke around with computers and force them to do things that 
 	they're not designed to do.</div></font>
-<br>
-	<font color="gold"><div align="left" style="font-size:50%">You can contact me by visiting the 
-	<a href="contact.html" style="color:gold; text-decoration:none";><u>Contact</u></a> page.</div></font><br>
+<br>  
+	<a href="https://www.linkedin.com/in/chris-mcgimpsey-jones" style="color:gold; text-decoration:none";><img src="images/linkedin-button.png" height="48"></a><br>
 <br>
 	<div align="right" style="font-size:40%">------------------------------</div>
 	<div align="right" style="font-size:40%">&copy; Copyright 2021-2022</div>
