--- a/about.html
+++ b/about.html
@@ -205,7 +205,7 @@
 	<font color="gold"><div align="left" style="font-size:50%">Most of our infrastructure is built from a combination of laptops and recycled 
 	desktop computers, with some of them running as servers. We operate an internal intranet with multiple domains which interconnects seamlessly 
 	with the internet, allowing public access. Some publicly accessible components of Harmonious Platform are hosted using traditional server 
-	methods. Our hybrid network allows for seamless performance and has created an extremely stable and rodust platform. Generally, most people 
+	methods. Our hybrid network allows for seamless performance and has created an extremely stable and robust platform. Generally, most people 
 	would be very surprised about what we have been able to achieve on the bare minimum of hardware that we operate.</div></font>
 <br>
 	<font color="gold"><div align="left" style="font-size:50%">Operating and administering our own infrastructure can be resource intensive and actually 
