changed refs for ping-go to new .website domain. .online has been dumped.

--- a/hardware.html
+++ b/hardware.html
@@ -93,7 +93,7 @@
 &nbsp;&nbsp; 
 		<!-- item sub entry -->
 		<!-- item desc:ping-go -->
-	|___ <a href="http://www.ping-go.online" style="color:blue; 
+	|___ <a href="http://www.ping-go.website" style="color:blue; 
 		text-decoration:none";>PING-GO</a>
 	</strong></div></font>
 		<!-- thank you for the crazy ride -->
