--- a/starblock-credits/index.html
+++ b/starblock-credits/index.html
@@ -95,7 +95,7 @@ cursor: pointer;
 &nbsp;&nbsp; 
 		<!-- item sub entry -->
 		<!-- item desc:ping-go -->
-	|___ <a href="http://www.ping-go.online" style="color:blue; 
+	|___ <a href="http://www.ping-go.website" style="color:blue; 
 		text-decoration:none";>PING-GO</a>
 	</strong></div></font>
 		<!-- thank you for the crazy ride -->
