--- a/starblock-credits/index.html
+++ b/starblock-credits/index.html
@@ -161,7 +161,7 @@ cursor: pointer;
 	We are still developing software which enables selling and trading. CMDC operates on our private blockchain, called Gobble Chain. In March 2022 it received 
 	its first major upgrade to version 2.0.</div></font><br>
 
-	<font color="black"><div align="left" style="font-size:50%">April 2022, we introduced three new tokens - Cicada 3301 Community Token, Power8 Token and TideIn 
+	<font color="black"><div align="left" style="font-size:50%">April 2022, we introduced three new tokens - CICADA Community Token, POWER8 Token and TIDEIN 
 	Token. Token options are now fully integrated into CMDC and Gobble Chain. Token options are mined and refined through a similar process to regular CMDC block 
 	sets, but have multiple layers of encryption, use a different verification method to include a unique tokenID and are valued differently. Tokens are limited 
 	in supply.</div></font><br>
@@ -210,10 +210,10 @@ Source: Wikipedia">[?]</span></b>, or NFTs.
 	<font color="black"><div align="left" style="font-size:60%"><strong>[Theoretical] Valuation (excluding tokens): $US 604,000,000</strong></div></font>
 <br>
 	<font color="black"><div align="left" style="font-size:60%"><strong>Token options: </strong></div></font>
-	<font color="black"><div align="left" style="font-size:60%"><strong><em>[Index:CICADA] Cicada 3301 Community Token</em> 
-<span title="Cicada 3301 Community Token has no association with the official Cicada 3301 Token (www.cicada3301token.com) that runs on the Ethereum blockchain. Cicada 3301 Community Token is an independent token developed specifically for Gobble Chain.">[?]</span></strong></div></font>
-	<font color="black"><div align="left" style="font-size:60%"><strong><em>[Index:POWER8] Power8 Token</em></strong></div></font>
-	<font color="black"><div align="left" style="font-size:60%"><strong><em>[Index:TIDEIN] TideIn Token</em></strong></div></font>
+	<font color="black"><div align="left" style="font-size:60%"><strong><em>[Index:CICADA] CICADA Community Token</em> 
+<span title="Cicada Community Token shares no association with the official Cicada 3301 Token (www.cicada3301token.com) that runs on the Ethereum blockchain. Cicada Community Token is an independent token developed specifically for Gobble Chain. The two should not be confused as they share no association.">[?]</span></strong></div></font>
+	<font color="black"><div align="left" style="font-size:60%"><strong><em>[Index:POWER8] POWER8 Token</em></strong></div></font>
+	<font color="black"><div align="left" style="font-size:60%"><strong><em>[Index:TIDEIN] TIDEIN Token</em></strong></div></font>
 <br>
 	<font color="black"><div align="left" style="font-size:60%"><strong>NFT listings: </strong></div></font>
 	<font color="black"><div align="left" style="font-size:60%"><strong><em>Not yet supported</em></strong></div></font><br>
