Added Administration Portal URL

--- a/index.html
+++ b/index.html
@@ -96,9 +96,10 @@
 	<a href="pricing.html">PRICING</a> | 
 	<a href="about.html">ABOUT</a> | 
 	<a href="contact.html">CONTACT</a> | 
-	<a href="">DOMAIN NAMES</a> < COMING SOON! | 
-	<a href="">HOSTING</a> < COMING SOON! | 
-	<a href="">GLOBAL SUPPORT</a> < COMING SOON!
+	<a href="">DOMAIN NAMES</a> | 
+	<a href="">HOSTING</a> | 
+	<a href="">GLOBAL SUPPORT</a> | 
+	<a href="https://free.redminepro.com/login">ADMINISTRATION PORTAL</a>
 	</strong></div></font>
 	<hr style="border: 1px solid gold;" />
 
