--- a/index.html
+++ b/index.html
@@ -229,6 +229,50 @@
 	<font color="gold"><div <span property="cc:attributionName" style="font-size:50%"><b><u>News</u></b></div></font>
 
 	<p style="border:3px; border-style:solid; border-color:gold; padding:1em; font-size:50%;">
+	<em><b>August 17, 2022</b><br>
+	<br>
+	Harmonious Platform Systems has been using the services of RedminePRO.
+	<br>
+	Not only were we using it for internal project management, but also using it to manage projects for our partners.
+	<br>
+	For unknown reasons, we have had our account locked and have been unable to receive any assistance from RedminePRO.
+	<br>
+	Harmonious Platform Systems strives to be 100% free and independent of big tech and other service providers.
+	<br>
+	However, sometimes we are still placed in a position, due to limited resources, to rely on outside service providers.
+	<br>
+	It's just the nature of the technology business and sometimes cannot be avoided.
+	<br>
+	RedminePRO has been one of our service providers and has been very good, when we had account access.
+	<br>
+	When our account was locked, we received no notification prior to it being locked and no notification after it was locked.
+	<br>
+	We only learned of it being locked when we attempted to routinely log in to our account.
+	<br>
+	Despite our repeated requests for support, we have been unable to get any response, at all, from RedminePRO.
+	<br>
+	We attempted to contact them using live support chat and we were ignored.
+	<br>
+	We contacted them using email and we were ignored.
+	<br>
+	We opened a support ticket and it was immediately closed.
+	<br>
+	We reopened the support ticket and despite it remaining open, we continue to be ignored.
+	<br>
+	The lack of support and lack of response from RedminePRO is very disappointing and frankly, pathetic.
+	<br>
+	As a result of our experience with RedminePRO, we unfortunately cannot recommend their services and we urge all to avoid and seek out 
+	alternative service providers.
+	<br>
+	Our experience with RedminePRO and its lack of care towards clients serves as a prime example of why Harmonious Platform Systems was 
+	created, why we strive to be 100% free of big tech and to be entirely independent, hosting all of our technology in-house.
+	<br>
+	We do not yet have the available resources in-house to be hosting Redmine on our network, therefore we have been forced to use 
+	third-party service provider, Atlassian, at this time.
+	</em>
+	</p>
+
+	<p style="border:3px; border-style:solid; border-color:gold; padding:1em; font-size:50%;">
 	<em><b>June 24, 2022</b><br>
 	<br>
 	We have successfully upgraded Gobble Chain to version 3.0.
