small fixes and updates

--- a/index.html
+++ b/index.html
@@ -98,8 +98,7 @@
 	<a href="contact.html">CONTACT</a> | 
 	<a href="">DOMAIN NAMES</a> | 
 	<a href="">HOSTING</a> | 
-	<a href="">GLOBAL SUPPORT</a> | 
-	<a href="https://free.redminepro.com/login">ADMINISTRATION PORTAL</a>
+	<a href="">GLOBAL SUPPORT</a>
 	</strong></div></font>
 	<hr style="border: 1px solid gold;" />
 
@@ -227,6 +226,15 @@
 	Throughout its development, Harmonious Platform has proven stable and robust against system failure.</div></font><br>
 <br>
 	<font color="gold"><div <span property="cc:attributionName" style="font-size:50%"><b><u>News</u></b></div></font>
+
+	<p style="border:3px; border-style:solid; border-color:gold; padding:1em; font-size:50%;">
+	<em><b>August 21, 2022</b><br>
+	<br>
+	We are now hosting Redmine in-house and will be used for all our project management services.
+	<br>
+	We are no longer using Atlassian.
+	</em>
+	</p>
 
 	<p style="border:3px; border-style:solid; border-color:gold; padding:1em; font-size:50%;">
 	<em><b>August 17, 2022</b><br>
