refresh site with any outstanding updates/fixes

--- a/chris-mcgimpsey-jones.html
+++ b/chris-mcgimpsey-jones.html
@@ -113,7 +113,8 @@
 	<font color="gold"><div align="left" style="font-size:50%">Other than than, I generally just poke around with computers and force them to do things that 
 	they're not designed to do.</div></font>
 <br>  
-	<a href="https://www.linkedin.com/in/chris-mcgimpsey-jones" style="color:gold; text-decoration:none";><img src="images/linkedin-button.png" height="48"></a><br>
+	<a href="https://www.linkedin.com/in/chris-mcgimpsey-jones" style="color:gold; text-decoration:none";><img src="images/linkedin-button.png" height="48"></a> 
+	<a href="https://g.dev/cipheranarchist" style="color:gold; text-decoration:none";><img src="images/google-devs-button.png" height="48"></a><br>
 <br>
 	<div align="right" style="font-size:40%">------------------------------</div>
 	<div align="right" style="font-size:40%">&copy; Copyright 2021-2022</div>
