added The Conversation button to bio

--- a/chris-mcgimpsey-jones.html
+++ b/chris-mcgimpsey-jones.html
@@ -114,7 +114,8 @@
 	they're not designed to do.</div></font>
 <br>  
 	<a href="https://www.linkedin.com/in/chris-mcgimpsey-jones" style="color:gold; text-decoration:none";><img src="images/linkedin-button.png" height="48"></a> 
-	<a href="https://g.dev/cipheranarchist" style="color:gold; text-decoration:none";><img src="images/google-devs-button.png" height="48"></a><br>
+	<a href="https://g.dev/cipheranarchist" style="color:gold; text-decoration:none";><img src="images/google-devs-button.png" height="48"></a> 
+	<a href="https://www.theconversation.com/profiles/chris-mcgimpsey-jones-1078090" style="color:gold; text-decoration:none";><img src="images/friend-the-conversation-button.png" height="48"></a><br>
 <br>
 	<div align="right" style="font-size:40%">------------------------------</div>
 	<div align="right" style="font-size:40%">&copy; Copyright 2021-2022</div>
