--- a/chris-mcgimpsey-jones.html
+++ b/chris-mcgimpsey-jones.html
@@ -105,15 +105,18 @@
 <br>
 	<font color="gold"><div align="left" style="font-size:50%">Hello! My name is Chris and I am the founder of Harmonious Platform Systems.</div></font>
 <!-- no break here on this occasion -->
-	<font color="gold"><div align="left" style="font-size:50%">I live in Australia and am a writer, publisher, political activist and civil 
-	libertarian.</div></font>
+	<font color="gold"><div align="left" style="font-size:50%">I live in Australia and am a writer, publisher, political activist and civil libertarian.</div></font>
 <!-- no break here on this occasion -->
 	<font color="gold"><div align="left" style="font-size:50%">I am a public advocate for Creative Commons and Tor Project with great interest in 
 	encryption and infosec.</div></font>
-	<font color="gold"><div align="left" style="font-size:50%">Other than than, I generally just poke around with computers and force them to do things that 
+	<font color="gold"><div align="left" style="font-size:50%">Other than that, I generally just poke around with computers and force them to do things that 
 	they're not designed to do.</div></font>
+<br>
+	<br>
+	<font color="gold"><div align="left" style="font-size:50%"><a href="http://www.harmoniousplatformsystems.website/files/docs/public/cmj_resume-extended.pdf">Public Profile</a></div></font>
 <br>  
 	<a href="https://www.linkedin.com/in/chris-mcgimpsey-jones" style="color:gold; text-decoration:none";><img src="images/linkedin-button.png" height="48"></a> 
+	<a href="https://www.facebook.com/chrismcgimpseyjonespress" style="color:gold; text-decoration:none";><img src="images/facebook-button.png" height="48"></a>
 	<a href="https://g.dev/cipheranarchist" style="color:gold; text-decoration:none";><img src="images/google-devs-button.png" height="48"></a> 
 	<a href="https://www.theconversation.com/profiles/chris-mcgimpsey-jones-1078090" style="color:gold; text-decoration:none";><img src="images/friend-the-conversation-button.png" height="48"></a><br>
 <br>
