Updated bio page, added images and updated profile doc

--- a/chris-mcgimpsey-jones.html
+++ b/chris-mcgimpsey-jones.html
@@ -94,30 +94,34 @@
 	</strong></div></font>
 	<hr style="border: 1px solid gold;" /><br>
 
+		<!-- header image -->
+	<center>
+	<img src="images/profile-header.png" height="280" style="border:5px solid white"> <img src="images/twitter-header-updated_fixed.png" height="280" style="border:5px solid white">
+	</center><br>
+<br>
 		<!-- sub menu \./ -->
 	<font color="gold"><div align="left" style="font-size:50%"><strong>
 	<a href="press.html">PRESS</a>
 	</strong></div></font>
 
-	<p><strong>Chris McGimpsey-Jones</strong></p>
+	<p><strong>Chris McGimpsey-Jones</strong><br>
+	ABN: 98 317 740 240</p>
 
 	<img src="images/chris-bio.jpg" height="200"><br>
 <br>
-	<font color="gold"><div align="left" style="font-size:50%">Hello! My name is Chris and I am the founder of Harmonious Platform Systems.</div></font>
+	<font color="gold"><div align="left" style="font-size:50%">Freedom Publishers Union Co-Founder</div></font>
 <!-- no break here on this occasion -->
-	<font color="gold"><div align="left" style="font-size:50%">I live in Australia and am a writer, publisher, political activist and civil libertarian.</div></font>
-<!-- no break here on this occasion -->
-	<font color="gold"><div align="left" style="font-size:50%">I am a public advocate for Creative Commons and Tor Project with great interest in 
-	encryption and infosec.</div></font>
-	<font color="gold"><div align="left" style="font-size:50%">Other than that, I generally just poke around with computers and force them to do things that 
-	they're not designed to do.</div></font>
+	<font color="gold"><div align="left" style="font-size:50%">Political activist and Civil libertarian</div></font>
+	<font color="gold"><div align="left" style="font-size:50%">Pirate Party alumnus and Cicada 3301 (AU) custodian</div></font>
 <br>
-	<br>
 	<font color="gold"><div align="left" style="font-size:50%"><a href="http://www.harmoniousplatformsystems.website/files/docs/public/cmj_resume-extended.pdf">Public Profile</a></div></font>
 <br>  
-	<a href="https://www.linkedin.com/in/chris-mcgimpsey-jones" style="color:gold; text-decoration:none";><img src="images/linkedin-button.png" height="48"></a> 
-	<a href="https://g.dev/cipheranarchist" style="color:gold; text-decoration:none";><img src="images/google-devs-button.png" height="48"></a> 
-	<a href="https://www.theconversation.com/profiles/chris-mcgimpsey-jones-1078090" style="color:gold; text-decoration:none";><img src="images/friend-the-conversation-button.png" height="48"></a><br>
+	<a href="https://www.linkedin.com/in/chris-mcgimpsey-jones" style="color:gold; text-decoration:none";><img src="images/linkedin-logo.png" height="48"></a> 
+	<a href="https://g.dev/cipheranarchist" style="color:gold; text-decoration:none";><img src="images/google-logo.png" height="48"></a> 
+	<a href="https://www.theconversation.com/profiles/chris-mcgimpsey-jones-1078090" style="color:gold; text-decoration:none";><img src="images/the-conv-logo.png" height="48"></a> 
+	<a href="https://www.gab.com/cicada3301au" style="color:gold; text-decoration:none";><img src="images/gab-logo.png" height="48"></a> 
+	<a href="https://www.parler.com/cicada3301au" style="color:gold; text-decoration:none";><img src="images/parler-logo.png" height="48"></a> 
+	<a href="https://www.twitter.com/cipheranarchist" style="color:gold; text-decoration:none";><img src="images/twitter-logo.png" height="48"></a><br>
 <br>
 	<div align="right" style="font-size:40%">------------------------------</div>
 	<div align="right" style="font-size:40%">&copy; Copyright 2021-2022</div>
