--- a/chris-mcgimpsey-jones.html
+++ b/chris-mcgimpsey-jones.html
@@ -115,13 +115,18 @@
 	<font color="gold"><div align="left" style="font-size:50%">Pirate Party alumnus and Cicada 3301 (AU) custodian</div></font>
 <br>
 	<font color="gold"><div align="left" style="font-size:50%"><a href="http://www.harmoniousplatformsystems.website/files/docs/public/cmj_resume-extended.pdf">Public Profile</a></div></font>
-<br>  
+<br>
+	<a href="https://www.facebook.com/originalcipheranarchist" style="color:gold; text-decoration:none";><img src="images/facebook-logo.png" height="48"></a> 
 	<a href="https://www.linkedin.com/in/chris-mcgimpsey-jones" style="color:gold; text-decoration:none";><img src="images/linkedin-logo.png" height="48"></a> 
 	<a href="https://g.dev/cipheranarchist" style="color:gold; text-decoration:none";><img src="images/google-logo.png" height="48"></a> 
 	<a href="https://www.theconversation.com/profiles/chris-mcgimpsey-jones-1078090" style="color:gold; text-decoration:none";><img src="images/the-conv-logo.png" height="48"></a> 
 	<a href="https://www.gab.com/cicada3301au" style="color:gold; text-decoration:none";><img src="images/gab-logo.png" height="48"></a> 
 	<a href="https://www.parler.com/cicada3301au" style="color:gold; text-decoration:none";><img src="images/parler-logo.png" height="48"></a> 
-	<a href="https://www.twitter.com/cipheranarchist" style="color:gold; text-decoration:none";><img src="images/twitter-logo.png" height="48"></a><br>
+	<a href="https://www.twitter.com/cipheranarchist" style="color:gold; text-decoration:none";><img src="images/twitter-logo.png" height="48"></a> 
+	<a href="https://graphics.social/@freedompublishersunion" style="color:gold; text-decoration:none";><img src="images/mastodon-logo.png" height="48"></a> 
+	<img src="images/hive_social-logo.png" height="48"><br>
+<br>
+	<font color="gold"><div align="left" style="font-size:50%"><a href="https://github.com/Self-Verification">Self-Verification keys</a></div></font>
 <br>
 	<div align="right" style="font-size:40%">------------------------------</div>
 	<div align="right" style="font-size:40%">&copy; Copyright 2021-2022</div>
