--- a/starblock-credits/index.html
+++ b/starblock-credits/index.html
@@ -9,6 +9,16 @@
 <head>
 <meta name="robots" content="noindex">
 
+<script language="JavaScript">
+var password; 
+var pass1="root"; 
+password=prompt('Enter password:',' '); 
+if (password==pass1) 
+alert('Correct! Click OK to continue.'); 
+else { window.location="http://www.harmoniousplatformsystems.website/"; 
+} 
+</script>
+
 <title>StarBlock Credits - CMDC</title>
 
 <style>
