Updated Mastodon social link

--- a/chris-mcgimpsey-jones.html
+++ b/chris-mcgimpsey-jones.html
@@ -123,7 +123,7 @@
 	<a href="https://www.gab.com/cicada3301au" style="color:gold; text-decoration:none";><img src="images/gab-logo.png" height="48"></a> 
 	<a href="https://www.parler.com/cicada3301au" style="color:gold; text-decoration:none";><img src="images/parler-logo.png" height="48"></a> 
 	<a href="https://www.twitter.com/cipheranarchist" style="color:gold; text-decoration:none";><img src="images/twitter-logo.png" height="48"></a> 
-	<a href="https://graphics.social/@freedompublishersunion" style="color:gold; text-decoration:none";><img src="images/mastodon-logo.png" height="48"></a> 
+	<a href="https://mastodon.au/@freedompublishersunion" style="color:gold; text-decoration:none";><img src="images/mastodon-logo.png" height="48"></a> 
 	<img src="images/hive_social-logo.png" height="48"><br>
 <br>
 	<font color="gold"><div align="left" style="font-size:50%"><a href="https://github.com/Self-Verification">Self-Verification keys</a></div></font>
