--- a/hardware.html
+++ b/hardware.html
@@ -170,7 +170,7 @@
 	</div>
 
 	<div class="column right" style="background-color:black;">
-		<p><center><font size="3"><b>iPhone/Android cell phone</b></font></center></p>
+		<p><center><font size="3"><b>iPhone/Android Cell Phone</b></font></center></p>
 		<p><center><font size="2">Coming soon.</font></center></p>
 		<p><center><font size="2">Contact for more information.</font></center></p>
 	</div>
