--- a/chris-mcgimpsey-jones.html
+++ b/chris-mcgimpsey-jones.html
@@ -4,8 +4,6 @@
 	<!-- Site version 2.4.3 \./ -->
 
 <head>
-<script src="https://platform.linkedin.com/badges/js/profile.js" async defer type="text/javascript"></script>
-
 <title>Harmonious Platform Systems - Chris McGimpsey-Jones</title>
 
 <style>
@@ -101,7 +99,8 @@
 	</strong></div></font>
 
 	<p><strong>Chris McGimpsey-Jones</strong><br>
-	ABN: 98 317 740 240</p>
+	ABN: 98 317 740 240<br>
+	<a href="https://www.chrismcgimpseyjones.tech">www.chrismcgimpseyjones.tech</a></p>
 
 	<img src="images/chris-bio.jpg" height="200"><br>
 <br>
@@ -119,8 +118,7 @@
 	<a href="https://www.gab.com/cicada3301au" style="color:gold; text-decoration:none";><img src="images/gab-logo.png" height="48"></a> 
 	<a href="https://www.parler.com/cicada3301au" style="color:gold; text-decoration:none";><img src="images/parler-logo.png" height="48"></a> 
 	<a href="https://www.twitter.com/cipheranarchist" style="color:gold; text-decoration:none";><img src="images/twitter-logo.png" height="48"></a> 
-	<a href="https://mastodon.au/@freedompublishersunion" style="color:gold; text-decoration:none";><img src="images/mastodon-logo.png" height="48"></a> 
-	<img src="images/hive_social-logo.png" height="48"><br>
+	<a href="https://mastodon.au/@freedompublishersunion" style="color:gold; text-decoration:none";><img src="images/mastodon-logo.png" height="48"></a><br>
 <br>
 	<font color="gold"><div align="left" style="font-size:50%"><a href="https://github.com/Self-Verification">Self-Verification keys</a></div></font>
 <br>
