Minor site update, plus new certifications

--- a/index.html
+++ b/index.html
@@ -243,6 +243,23 @@
 	<font color="gold"><div <span property="cc:attributionName" style="font-size:50%"><b><u>News</u></b></div></font>
 
 	<p style="border:3px; border-style:solid; border-color:gold; padding:1em; font-size:50%;">
+	<em><b>April 4, 2023</b><br>
+	<br>
+	Ubuntu 23.04 has been certified for use with Harmonious Platform Systems.
+	<br>
+	Fedora 38 has been certified for use with Harmonious Platform Systems.
+	<br>
+	OpenSUSE Leap 15.5 has been certified for use with Harmonious Platform Systems.
+	<br>
+	pfSense has been certified for use with Harmonious Platform Systems.
+	<br>
+	NetBSD has been certified for use with Harmonious Platform Systems.
+	<br>
+	OpenBSD has been certified for use with Harmonious Platform Systems.
+	</em>
+	</p>
+	
+	<p style="border:3px; border-style:solid; border-color:gold; padding:1em; font-size:50%;">
 	<em><b>November 12, 2022</b><br>
 	<br>
 	Development focus for Harmonious Platform Systems has shifted to specification version 4.0.
@@ -601,15 +618,16 @@
 	<img src="images/php-logo.png" alt="php-logo" width="56" height="56"> 
 	<img src="images/python-logo.png" alt="python-logo" width="56" height="56"> 
 	<img src="images/perl-logo.png" alt="perl-logo" width="56" height="56"> 
-	<img src="images/mozilla-logo.png" alt="mozilla-logo" width="56" height="56"> 
+	<img src="images/vim-logo.png" alt="vim-logo" width="56" height="56"> 
 	<img src="images/gnu-logo.png" alt="gnu-logo" width="56" height="56"> 
 	<img src="images/linux-logo.png" alt="linux-logo" width="56" height="56"> 
+	<img src="images/mozilla-logo.png" alt="mozilla-logo" width="56" height="56"> 
 	<img src="images/tumbleweed-logo.png" alt="tumbleweed-logo" width="56" height="56"> 
 	<img src="images/ubuntu-logo.png" alt="ubuntu-logo" width="56" height="56"> 
 	<img src="images/ibm-logo.png" alt="ibm-logo" width="56" height="56"> 
 	<img src="images/redhat-logo.png" alt="redhat-logo" width="56" height="56"> 
 	<img src="images/fedora-logo.png" alt="fedora-logo" width="56" height="56"> 
-	<img src="images/win32-logo.png" alt="win32-logo" width="56" height="56"> 
+	<img src="images/microsoft-logo.png" alt="microsoft-logo" width="56" height="56"> 
 	<img src="images/bsd-logo.png" alt="bsd-logo" width="56" height="56"> 
 	<img src="images/netbsd-logo.png" alt="netbsd-logo" width="56" height="56"> 
 	<img src="images/openbsd-logo.png" alt="openbsd-logo" width="56" height="56">
