--- a/certification.html
+++ b/certification.html
@@ -101,26 +101,22 @@
 	incompatible or that we do not support its use with the platform. It simply means that we have not yet performed the required amount of testing for 
 	it to be certified and officially endorsed by Harmonious Platform Systems.</div>
 <br>
-	<p style="border:3px; border-style:solid; border-color:red; padding:1em; font-size:50%;">
-	<b>Under review:</b><br>
-	&#10007; Ubuntu 22.10
-	<br>
-	&#10007; OpenSUSE Leap 15.4
-	<br>
-	&#10007; Fedora 37 Workstation
-	<br>
-	&#10007; NetBSD (version pending)
-	<br>
-	&#10007; OpenBSD (version pending)
-	<br>
-	&#10007; pfSense (version pending)
-	</p>
+	<div style="font-size:50%;">
+	<strong>Under review:</strong><br>
+	<ul>
+		<li>Nothing. </li>
+	</ul>
+	<!-- 
+		X emoji, for future use keep here
+			&#10007;
+	-->
+	</div>
 <br>
 
-	<p style="border:3px; border-style:solid; border-color:purple; padding:1em; font-size:50%;">
+	<p style="border:3px; border-style:solid; border-color:gold; padding:1em; font-size:50%;">
 	<b>&#10003; Certified | Mozilla Firefox</b><br>
 	<br>
-	<img src="images/Firefox_logo.png"><br>
+	<img src="images/Firefox_logo.png" width="200" style="border:1px solid gold"><br>
 	<br>
 	Version: 100+
 	<br>
@@ -133,10 +129,26 @@
 	<a href="https://www.mozilla.org/en-US/firefox/">www.mozilla.org/en-US/firefox</a>
 	</p>
 
-	<p style="border:3px; border-style:solid; border-color:orange; padding:1em; font-size:50%;">
+	<p style="border:3px; border-style:solid; border-color:gold; padding:1em; font-size:50%;">
+	<b>&#10003; Certified | Ubuntu 23.04 (Linux)</b><br>
+	<br>
+	<img src="images/Ubuntu_logo.png" width="200" style="border:1px solid gold"><br>
+	<br>
+	Version: 23.04
+	<br>
+	Architecture: 64bit
+	<br>
+	Platform: Desktop<br>
+	<br>
+	Ubuntu 23.04 is certified for use with Harmonious Platform Systems, on the desktop.<br>
+	<br>
+	<a href="https://www.ubuntu.com/">www.ubuntu.com</a>
+	</p>
+
+	<p style="border:3px; border-style:solid; border-color:gold; padding:1em; font-size:50%;">
 	<b>&#10003; Certified | Ubuntu 22.04 (Linux)</b><br>
 	<br>
-	<img src="images/Ubuntu_logo.png"><br>
+	<img src="images/Ubuntu_logo.png" width="200" style="border:1px solid gold"><br>
 	<br>
 	Version: 22.04.1 LTS
 	<br>
@@ -149,10 +161,10 @@
 	<a href="https://www.ubuntu.com/">www.ubuntu.com</a>
 	</p>
 
-	<p style="border:3px; border-style:solid; border-color:orange; padding:1em; font-size:50%;">
+	<p style="border:3px; border-style:solid; border-color:gold; padding:1em; font-size:50%;">
 	<b>&#10003; Certified | Ubuntu 20.04 (Linux)</b><br>
 	<br>
-	<img src="images/Ubuntu_logo.png"><br>
+	<img src="images/Ubuntu_logo.png" width="200" style="border:1px solid gold"><br>
 	<br>
 	Version: 20.04.5 LTS
 	<br>
@@ -165,26 +177,42 @@
 	<a href="https://www.ubuntu.com">www.ubuntu.com</a>
 	</p>
 
-	<p style="border:3px; border-style:solid; border-color:lightblue; padding:1em; font-size:50%;">
-	<b>&#10003; Certified | Fedora 35 (Linux)</b><br>
+	<p style="border:3px; border-style:solid; border-color:gold; padding:1em; font-size:50%;">
+	<b>&#10003; Certified | Fedora 38 (Linux)</b><br>
 	<br>
-	<img src="images/Fedora_logo.png"><br>
+	<img src="images/Fedora_logo.png" width="200" style="border:1px solid gold"><br>
 	<br>
-	Version: 35
+	Version: 38
 	<br>
 	Architecture: 64bit
 	<br>
 	Platform: Workstation<br>
 	<br>
-	Fedora 35 is certified for use with Harmonious Platform Systems, on the workstation.<br>
+	Fedora 38 is certified for use with Harmonious Platform Systems, on the workstation.<br>
 	<br>
 	<a href="https://getfedora.org/en/workstation">https://getfedora.org/en/workstation</a>
 	</p>
 
-	<p style="border:3px; border-style:solid; border-color:cyan; padding:1em; font-size:50%;">
+	<p style="border:3px; border-style:solid; border-color:gold; padding:1em; font-size:50%;">
+	<b>&#10003; Certified | OpenSUSE Leap 15.5 (Linux)</b><br>
+	<br>
+	<img src="images/OpenSUSE_Leap_logo.png" width="200" style="border:1px solid gold"><br>
+	<br>
+	Version: 15.5
+	<br>
+	Architecture: 64bit
+	<br>
+	Platform: Desktop<br>
+	<br>
+	OpenSUSE Leap 15.5 is certified for use with Harmonious Platform Systems, on the desktop.<br>
+	<br>
+	<a href="https://get.opensuse.org/leap">https://get.opensuse.org/leap</a>
+	</p>
+
+	<p style="border:3px; border-style:solid; border-color:gold; padding:1em; font-size:50%;">
 	<b>&#10003; Certified | Tumbleweed (Linux)</b><br>
 	<br>
-	<img src="images/Tumbleweed_logo.png"><br>
+	<img src="images/Tumbleweed_logo.png" width="200" style="border:1px solid gold"><br>
 	<br>
 	Version: Rolling distribution
 	<br>
@@ -197,10 +225,42 @@
 	<a href="https://get.opensuse.org/tumbleweed">https://get.opensuse.org/tumbleweed</a>
 	</p>
 
-	<p style="border:3px; border-style:solid; border-color:darkblue; padding:1em; font-size:50%;">
+	<p style="border:3px; border-style:solid; border-color:gold; padding:1em; font-size:50%;">
+	<b>&#10003; Certified | NetBSD (Unix/BSD)</b><br>
+	<br>
+	<img src="images/NetBSD_logo.png" width="200" style="border:1px solid gold"><br>
+	<br>
+	Version: All
+	<br>
+	Architecture: 64bit
+	<br>
+	Platform: Server<br>
+	<br>
+	NetBSD is certified for use with Harmonious Platform Systems, on the server.<br>
+	<br>
+	<a href="https://www.netbsd.org">https://www.netbsd.org</a>
+	</p>
+
+	<p style="border:3px; border-style:solid; border-color:gold; padding:1em; font-size:50%;">
+	<b>&#10003; Certified | OpenBSD (Unix/BSD)</b><br>
+	<br>
+	<img src="images/OpenBSD_logo.png" width="200" style="border:1px solid gold"><br>
+	<br>
+	Version: All
+	<br>
+	Architecture: 64bit
+	<br>
+	Platform: Server<br>
+	<br>
+	OpenBSD is certified for use with Harmonious Platform Systems, on the server.<br>
+	<br>
+	<a href="https://www.openbsd.org">https://www.openbsd.org</a>
+	</p>
+
+	<p style="border:3px; border-style:solid; border-color:gold; padding:1em; font-size:50%;">
 	<b>&#10003; Certified | Microsoft Windows Server</b><br>
 	<br>
-	<img src="images/Windows_Server_logo.png"><br>
+	<img src="images/Windows_Server_logo.png" width="200" style="border:1px solid gold"><br>
 	<br>
 	Version: All versions
 	<br>
@@ -213,10 +273,10 @@
 	<a href="https://www.microsoft.com/en-au/windows-server">https://www.microsoft.com/en-au/windows-server</a>
 	</p>
 
-	<p style="border:3px; border-style:solid; border-color:blue; padding:1em; font-size:50%;">
+	<p style="border:3px; border-style:solid; border-color:gold; padding:1em; font-size:50%;">
 	<b>&#10003; Certified | Microsoft Windows 11</b><br>
 	<br>
-	<img src="images/Windows_11_logo.png"><br>
+	<img src="images/Windows_11_logo.png" width="200" style="border:1px solid gold"><br>
 	<br>
 	Version: 11
 	<br>
@@ -229,12 +289,12 @@
 	<a href="https://www.microsoft.com/en-au/windows">https://www.microsoft.com/en-au/windows</a>
 	</p>
 
-	<p style="border:3px; border-style:solid; border-color:darkred; padding:1em; font-size:50%;">
+	<p style="border:3px; border-style:solid; border-color:gold; padding:1em; font-size:50%;">
 	<b>&#10003; Certified | IPFire</b><br>
 	<br>
-	<img src="images/IPFire_logo.png"><br>
+	<img src="images/IPFire_logo.png" width="200" style="border:1px solid gold"><br>
 	<br>
-	Version: 2.27 (Core Update 171)
+	Version: All
 	<br>
 	Architecture: 64bit
 	<br>
@@ -243,6 +303,22 @@
 	IPFire is certified for use with Harmonious Platform Systems, on the server and virtual server.<br>
 	<br>
 	<a href="https://www.ipfire.org">https://www.ipfire.org</a>
+	</p>
+
+	<p style="border:3px; border-style:solid; border-color:gold; padding:1em; font-size:50%;">
+	<b>&#10003; Certified | pfSense</b><br>
+	<br>
+	<img src="images/pfSense_logo.png" width="200" style="border:1px solid gold"><br>
+	<br>
+	Version: All
+	<br>
+	Architecture: 64bit
+	<br>
+	Platform: Server/Virtual Server<br>
+	<br>
+	pfSense is certified for use with Harmonious Platform Systems, on the server and virtual server.<br>
+	<br>
+	<a href="https://www.pfsense.org">https://www.pfsense.org</a>
 	</p>
 
 <br>
