Created academy/ index

--- a/index.html
+++ b/index.html
@@ -146,7 +146,8 @@
 		<!-- sub-menu, only to be used on index page -->
 	<font color="gold"><div align="right" style="font-size:50%"><strong><u>MORE</u></strong></div></font>
 	<font color="gold"><div align="right" style="font-size:50%"><strong>&#8595;</strong></div></font>
-	<font color="gold"><div align="right" style="font-size:50%"><a href="cmdc.html" style="color:blue; text-decoration:none";>CMDC</a></div></font><br>
+	<font color="gold"><div align="right" style="font-size:50%"><a href="cmdc.html" style="color:blue; text-decoration:none";>CMDC</a></font><br>
+	<font color="gold"><a href="academy/index.html" style="color:blue; text-decoration:none";>Academy</a></div></font><br>
 	
 
 			<!-- logo image is to be used as part of the title text \./ -->
