Academy launched+Website update

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<!-- Harmonious Platform Systems \./ -->
-	<!-- Site version 2.4.3 \./ -->
+	<!-- Site version 2.4.4 \./ -->
 
 <head>
 	<title>Harmonious_Platform_Systems - Hybrid Networking + OSINT/AP-SEC/EU-COOP/Data Analysis/Anti-Fraud</title>
@@ -98,7 +98,8 @@
 	<a href="contact.html">CONTACT</a> | 
 	<a href="">DOMAIN NAMES</a> | 
 	<a href="">HOSTING</a> | 
-	<a href="">GLOBAL SUPPORT</a>
+	<a href="">GLOBAL SUPPORT</a> | 
+	<a href="academy/index.html">ACADEMY</a>
 	</strong></div></font>
 	<hr style="border: 1px solid gold;" />
 
@@ -146,9 +147,8 @@
 		<!-- sub-menu, only to be used on index page -->
 	<font color="gold"><div align="right" style="font-size:50%"><strong><u>MORE</u></strong></div></font>
 	<font color="gold"><div align="right" style="font-size:50%"><strong>&#8595;</strong></div></font>
-	<font color="gold"><div align="right" style="font-size:50%"><a href="cmdc.html" style="color:blue; text-decoration:none";>CMDC</a></font><br>
-	<font color="gold"><a href="academy/index.html" style="color:blue; text-decoration:none";>Academy</a></div></font><br>
-	
+	<font color="gold"><div align="right" style="font-size:50%"><a href="cmdc.html" style="color:blue; text-decoration:none";>CMDC</a></div></font><br>
+
 
 			<!-- logo image is to be used as part of the title text \./ -->
 		<font color="gold"><div style="font-size:175%">
@@ -179,14 +179,11 @@
 	<br>
 
 			<!-- general status summary of Harmonious Platform -->
-	<font color="gold"><div align="right" style="font-size:50%"><b><u>Network Health Snapshot</u></b></div></font>
+	<font color="gold"><div align="right" style="font-size:50%"><b><u><strong>Network Snapshot</strong></u></b></div></font>
 	<font color="gold"><div align="right" style="font-size:50%"><strong>&#8595;</strong></div></font>
 
-	<font color="gold"><div align="right" style="font-size:40%"><label for="dev">Uptime (2022) (90%)</label></div></font>
-	<font color="gold"><div align="right" style="font-size:40%"><progress id="dev" value="90" max="100"> 90% </progress></div></font>
-
-	<font color="gold"><div align="right" style="font-size:40%"><label for="dev">Health (95%)</label></div></font>
-	<font color="gold"><div align="right" style="font-size:40%"><progress id="dev" value="95" max="100"> 95% </progress></div></font>
+	<font color="green"><div align="right" style="font-size:40%"><label for="dev"><strong>Health (100%)</strong></label></div></font>
+	<font color="gold"><div align="right" style="font-size:40%"><progress id="dev" value="100" max="100"> 100% </progress></div></font>
 <!-- cont. -->
 
 	<font color="gold"><div style="font-size:65%"><i>Freedom from <b>Mass-surveillance</b> ... &nbsp;&nbsp;&nbsp;&nbsp;&#10004;</i></div></font>
@@ -242,6 +239,17 @@
 	and robust against system failure.</div></font><br>
 <br>
 	<font color="gold"><div <span property="cc:attributionName" style="font-size:50%"><b><u>News</u></b></div></font>
+
+	<p style="border:3px; border-style:solid; border-color:gold; padding:1em; font-size:50%;">
+	<em><b>June 22, 2023</b><br>
+	<br>
+	Gobble Chain has been upgraded from version 3.0 > version 4.0.
+	<br>
+	Harmonious Platform Systems website has been upgraded from 2.4.3 > 2.4.4.
+	<br>
+	Harmonious Platform Systems Academy has been officially launched.
+	</em>
+	</p>
 
 	<p style="border:3px; border-style:solid; border-color:gold; padding:1em; font-size:50%;">
 	<em><b>April 4, 2023</b><br>
@@ -636,11 +644,11 @@
 	<br>
 <br>
 	<div align="right" style="font-size:40%">------------------------------</div>
-	<div align="right" style="font-size:40%">&copy; Copyright 2021-2022</div>
+	<div align="right" style="font-size:40%">&copy; Copyright 2021-2023</div>
 	<div align="right" style="font-size:40%">Harmonious Platform Systems</div>
 	<div align="right" style="font-size:40%">ABN: 98 317 740 240</div>
 <!-- br -->
-	<div align="left" style="font-size:35%"><b>Site version 2.4.3</b></div><br>
+	<div align="left" style="font-size:35%"><b>Site version 2.4.4</b></div><br>
     </font>
 </div> 
 
