--- a/academy/index.html
+++ b/academy/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<!-- Harmonious Platform Systems \./ -->
-	<!-- Site version 2.4.3 \./ -->
+	<!-- Site version 2.4.4 \./ -->
 
 <head>
 <meta name="robots" content="noindex">
@@ -18,6 +18,17 @@
 .main {
   font-size: 24px;
 }
+
+.button {
+  border: none;
+  padding: 2px 8px;
+  text-align: center;
+  display: inline-block;
+  font-size: 10px;
+  margin: 4px 2px;
+  cursor: pointer;
+}
+.button {background-color: gold;} /* button */
 </style>
 </head>
 
@@ -97,15 +108,40 @@
 
 	<p><strong>Academy</strong></p>
 <br>
-	<font color="gold"><div align="left" style="font-size:50%">Under development.</div></font>
+	<font color="gold"><div align="left" style="font-size:50%">A training and certifications initiative, by Harmonious Platform Systems.</div></font><br>
+<br>
+	<font color="gold"><div align="left" style="font-size:50%"><strong>Certifications</strong></div></font>
+<br>
+	<font color="gold"><div align="left" style="font-size:50%"><strong>Certificate Level 1 (HPSA1NA) - NETWORK ADMINISTRATION</strong></font><br>
+<br>
+	<font color="gold">&nbsp Level 1 certifies a proven ability in Network Administration of an operational computer network, 
+	functioning as part of the Harmonious Platform Systems infrastructure.</div></font><br>
+
+	<font color="gold"><div align="left" style="font-size:50%"><strong>Certificate Level 2 (HPSA2EN) - ENGINEER</strong></font><br>
+<br>
+	<font color="gold">&nbsp Level 2 certifies a proven ability as an Engineer to resolve issues without impacting data or security integrity of an 
+	operational computer network, functioning as part of the Harmonious Platform Systems infrastructure.</div></font><br>
+
+	<font color="gold"><div align="left" style="font-size:50%"><strong>Certificate Level 3 (HPSA3AR) - ARCHITECT</strong></font><br>
+<br>
+	<font color="gold">&nbsp Level 3 certifies a proven ability as an Architect to develop and implement new strategies and technologies for computer 
+	networks, functioning as part of the Harmonious Platform Systems infrastructure.</div></font><br>
+
+	<font color="gold"><div align="left" style="font-size:50%"><strong>Certificate Level 4 (HPSA4MA) - MASTER</strong></font><br>
+<br>
+	<font color="gold">&nbsp Level 4 certifies a proven ability as a Master to manage computer systems and servers with unrestricted administrative 
+	access and to make exceptional decisions for computer networks, functioning as part of the Harmonious Platform Systems infrastructure.</div></font>
+<br>
+	<button class="button button"><b><a href="" style="color:black; text-decoration:none">Apply</a></b></button>
+	<font color="gold"><div align="left" style="font-size:45%"><em>Not current accepting applications.</em></div></font>
 
 <br>
 	<div align="right" style="font-size:40%">------------------------------</div>
-	<div align="right" style="font-size:40%">&copy; Copyright 2021-2022</div>
+	<div align="right" style="font-size:40%">&copy; Copyright 2021-2023</div>
 	<div align="right" style="font-size:40%">Harmonious Platform Systems</div>
 	<div align="right" style="font-size:40%">ABN: 98 317 740 240</div>
 <!-- br -->
-	<div align="left" style="font-size:35%"><b>Site version 2.4.3</b></div><br>
+	<div align="left" style="font-size:35%"><b>Site version 2.4.4</b></div><br>
     </font>
 </div> 
 
