--- a/academy/index.html
+++ b/academy/index.html
@@ -133,7 +133,7 @@
 	access and to make exceptional decisions for computer networks, functioning as part of the Harmonious Platform Systems infrastructure.</div></font>
 <br>
 	<button class="button button"><b><a href="" style="color:black; text-decoration:none">Apply</a></b></button>
-	<font color="gold"><div align="left" style="font-size:45%"><em>Not current accepting applications.</em></div></font>
+	<font color="gold"><div align="left" style="font-size:45%"><em>Not currently accepting applications.</em></div></font>
 
 <br>
 	<div align="right" style="font-size:40%">------------------------------</div>
