Updated profile page

--- a/chris-mcgimpsey-jones.html
+++ b/chris-mcgimpsey-jones.html
@@ -100,26 +100,18 @@
 
 	<p><strong>Chris McGimpsey-Jones</strong><br>
 	ABN: 98 317 740 240<br>
-	<a href="https://www.chrismcgimpseyjones.tech">www.chrismcgimpseyjones.tech</a></p>
+	<a href="https://www.chrismcgimpseyjones.tech" style="color:gold; text-decoration:none";>www.chrismcgimpseyjones.tech</a></p>
 
 	<img src="images/chris-bio.jpg" height="200"><br>
 <br>
-	<font color="gold"><div align="left" style="font-size:50%">Freedom Publishers Union Co-Founder</div></font>
+	<font color="gold"><div align="left" style="font-size:50%">Unixmen alumnus :: Pirate Party alumnus :: Australian Republic Movement member</div></font>
 <!-- no break here on this occasion -->
-	<font color="gold"><div align="left" style="font-size:50%">Political activist and Civil libertarian</div></font>
-	<font color="gold"><div align="left" style="font-size:50%">Pirate Party alumnus and Cicada 3301 (AU) custodian</div></font>
+	<font color="gold"><div align="left" style="font-size:50%">Freedom Publishers Union Co-Founder :: Cicada 3301 (AU) custodian</div></font>
 <br>
 	<font color="gold"><div align="left" style="font-size:50%"><a href="http://www.harmoniousplatformsystems.website/files/docs/public/cmj_resume-extended.pdf">Public Profile</a></div></font>
-<br>
-	<a href="https://www.facebook.com/originalcipheranarchist" style="color:gold; text-decoration:none";><img src="images/facebook-logo.png" height="48"></a> 
-	<a href="https://www.linkedin.com/in/chris-mcgimpsey-jones" style="color:gold; text-decoration:none";><img src="images/linkedin-logo.png" height="48"></a> 
-	<a href="https://g.dev/cipheranarchist" style="color:gold; text-decoration:none";><img src="images/google-logo.png" height="48"></a> 
-	<a href="https://www.theconversation.com/profiles/chris-mcgimpsey-jones-1078090" style="color:gold; text-decoration:none";><img src="images/the-conv-logo.png" height="48"></a> 
-	<a href="https://www.gab.com/cicada3301au" style="color:gold; text-decoration:none";><img src="images/gab-logo.png" height="48"></a> 
-	<a href="https://www.parler.com/cicada3301au" style="color:gold; text-decoration:none";><img src="images/parler-logo.png" height="48"></a> 
-	<a href="https://www.twitter.com/cipheranarchist" style="color:gold; text-decoration:none";><img src="images/twitter-logo.png" height="48"></a> 
-	<a href="https://mastodon.au/@freedompublishersunion" style="color:gold; text-decoration:none";><img src="images/mastodon-logo.png" height="48"></a><br>
-<br>
+<!-- no break here on this occasion -->
+	<font color="gold"><div align="left" style="font-size:50%"><a href="https://linktr.ee/cipheranarchist">Linktree</a></div></font>
+<!-- no break here on this occasion -->
 	<font color="gold"><div align="left" style="font-size:50%"><a href="https://github.com/Self-Verification">Self-Verification keys</a></div></font>
 <br>
 	<div align="right" style="font-size:40%">------------------------------</div>
