--- a/site_nav/publishing/index.html
+++ b/site_nav/publishing/index.html
@@ -4,31 +4,20 @@
 	<!-- Site version 2.4.4 \./ -->
 
 <head>
-<meta name="robots" content="noindex">
+		<!-- Page redirection -->
+			<meta http-equiv="refresh" content="1; url=http://www.freedompublishersunion.net" />
 
-<title>Harmonious Platform Systems - Academy</title>
+<title>Harmonious Platform Systems - Publishing</title>
 
 <style>
   body
 {
   font-family: "courier", sans-serif; background-color: black;
-
 }
 
 .main {
   font-size: 24px;
 }
-
-.button {
-  border: none;
-  padding: 2px 8px;
-  text-align: center;
-  display: inline-block;
-  font-size: 10px;
-  margin: 4px 2px;
-  cursor: pointer;
-}
-.button {background-color: gold;} /* button */
 </style>
 </head>
 
@@ -95,45 +84,20 @@
 		<!-- site menu \./ -->
 	<font color="gold"><div align="center" style="font-size:50%"><strong>
 	<a href="http://www.harmoniousplatformsystems.website">HOME</a> | 
-	<a href="../components.html">COMPONENTS</a> | 
-	<a href="../progress.html">PROGRESS</a> | 
-	<a href="../status.html">STATUS</a> | 
-	<a href="../certification.html">CERTIFICATION</a> | 
-	<a href="../hardware.html">HARDWARE</a> | 
-	<a href="../pricing.html">PRICING</a> | 
-	<a href="../about.html">ABOUT</a> | 
-	<a href="../contact.html">CONTACT</a>
+	<a href="components.html">COMPONENTS</a> | 
+	<a href="progress.html">PROGRESS</a> | 
+	<a href="status.html">STATUS</a> | 
+	<a href="certification.html">CERTIFICATION</a> | 
+	<a href="hardware.html">HARDWARE</a> | 
+	<a href="pricing.html">PRICING</a> | 
+	<a href="about.html">ABOUT</a> | 
+	<a href="contact.html">CONTACT</a>
 	</strong></div></font>
 	<hr style="border: 1px solid gold;" /><br>
 
-	<p><strong>Academy</strong></p>
+	<p><strong>Publishing</strong></p>
 <br>
-	<font color="gold"><div align="left" style="font-size:50%">A training and certifications initiative, by Harmonious Platform Systems.</div></font><br>
-<br>
-	<font color="gold"><div align="left" style="font-size:50%"><strong>Certifications</strong></div></font>
-<br>
-	<font color="gold"><div align="left" style="font-size:50%"><strong>Certificate Level 1 (HPSA1NA) - NETWORK ADMINISTRATION</strong></font><br>
-<br>
-	<font color="gold">&nbsp Level 1 certifies a proven ability in Network Administration of an operational computer network, 
-	functioning as part of the Harmonious Platform Systems infrastructure.</div></font><br>
-
-	<font color="gold"><div align="left" style="font-size:50%"><strong>Certificate Level 2 (HPSA2EN) - ENGINEER</strong></font><br>
-<br>
-	<font color="gold">&nbsp Level 2 certifies a proven ability as an Engineer to resolve issues without impacting data or security integrity of an 
-	operational computer network, functioning as part of the Harmonious Platform Systems infrastructure.</div></font><br>
-
-	<font color="gold"><div align="left" style="font-size:50%"><strong>Certificate Level 3 (HPSA3AR) - ARCHITECT</strong></font><br>
-<br>
-	<font color="gold">&nbsp Level 3 certifies a proven ability as an Architect to develop and implement new strategies and technologies for computer 
-	networks, functioning as part of the Harmonious Platform Systems infrastructure.</div></font><br>
-
-	<font color="gold"><div align="left" style="font-size:50%"><strong>Certificate Level 4 (HPSA4MA) - MASTER</strong></font><br>
-<br>
-	<font color="gold">&nbsp Level 4 certifies a proven ability as a Master to manage computer systems and servers with unrestricted administrative 
-	access and to make exceptional decisions for computer networks, functioning as part of the Harmonious Platform Systems infrastructure.</div></font>
-<br>
-	<button class="button button"><b><a href="" style="color:black; text-decoration:none">Apply</a></b></button>
-	<font color="gold"><div align="left" style="font-size:45%"><em>Not currently accepting applications.</em></div></font>
+	<font color="gold"><div style="font-size:50%">Page redirecting... </div></font><br>
 
 <br>
 	<div align="right" style="font-size:40%">------------------------------</div>
