--- a/site_nav/technology.html
+++ b/site_nav/technology.html
@@ -5,9 +5,9 @@
 
 <head>
 		<!-- Page redirection -->
-			<!-- <meta http-equiv="refresh" content="1; url=http://www.freedompublishersunion.net/pages/contact.html" /> -->
+			<meta http-equiv="refresh" content="1; url=main.html" />
 
-<title>Harmonious Platform Systems - Technology</title>
+<title>Harmonious Platform Systems - Publishing</title>
 
 <style>
   body
@@ -95,7 +95,7 @@
 	</strong></div></font>
 	<hr style="border: 1px solid gold;" /><br>
 
-	<p><strong>Technology</strong></p>
+	<p><strong>Publishing</strong></p>
 <br>
 	<font color="gold"><div style="font-size:50%">Page redirecting... </div></font><br>
 
