--- a/site_nav/publishing.html
+++ b/site_nav/publishing.html
@@ -5,7 +5,7 @@
 
 <head>
 		<!-- Page redirection -->
-			<!-- <meta http-equiv="refresh" content="1; url=http://www.freedompublishersunion.net/pages/contact.html" /> -->
+			<meta http-equiv="refresh" content="1; url=publishing/index.html" />
 
 <title>Harmonious Platform Systems - Publishing</title>
 
