--- a/site_nav/main.html
+++ b/site_nav/main.html
@@ -280,347 +280,13 @@
 	OpenBSD has been certified for use with Harmonious Platform Systems.
 	</em>
 	</p>
-	
-	<p style="border:3px; border-style:solid; border-color:gold; padding:1em; font-size:50%;">
-	<em><b>November 12, 2022</b><br>
-	<br>
-	Development focus for Harmonious Platform Systems has shifted to specification version 4.0.
-	</em>
-	</p>
 
-	<p style="border:3px; border-style:solid; border-color:gold; padding:1em; font-size:50%;">
-	<em><b>November 11, 2022</b><br>
 	<br>
-	The Harmonious Platform Systems internal website is now hosted on OpenBSD.
-	<br>
-	The Freedom Publishers Union internal website has become the first website to be hosted on Gobble blockchain technology.
-	<br>
-	The former was a reasonably simple transition but the latter has been a huge effort and has required delicate, precise development.
-	<br>
-	We are proud to report the transition of both websites was seamless and no downtime was experienced.
-	</em>
-	</p>
-	
-	<p style="border:3px; border-style:solid; border-color:gold; padding:1em; font-size:50%;">
-	<em><b>August 21, 2022</b><br>
-	<br>
-	We are now hosting Redmine in-house and will be used for all our project management services.
-	<br>
-	We are no longer using Atlassian.
-	</em>
-	</p>
 
-	<p style="border:3px; border-style:solid; border-color:gold; padding:1em; font-size:50%;">
-	<em><b>August 17, 2022</b><br>
-	<br>
-	Harmonious Platform Systems has been using the services of RedminePRO.
-	<br>
-	Not only were we using it for internal project management, but also using it to manage projects for our partners.
-	<br>
-	For unknown reasons, we have had our account locked and have been unable to receive any assistance from RedminePRO.
-	<br>
-	Harmonious Platform Systems strives to be 100% free and independent of big tech and other service providers.
-	<br>
-	However, sometimes we are still placed in a position, due to limited resources, to rely on outside service providers.
-	<br>
-	It's just the nature of the technology business and sometimes cannot be avoided.
-	<br>
-	RedminePRO has been one of our service providers and has been very good, when we had account access.
-	<br>
-	When our account was locked, we received no notification prior to it being locked and no notification after it was locked.
-	<br>
-	We only learned of it being locked when we attempted to routinely log in to our account.
-	<br>
-	Despite our repeated requests for support, we have been unable to get any response, at all, from RedminePRO.
-	<br>
-	We attempted to contact them using live support chat and we were ignored.
-	<br>
-	We contacted them using email and we were ignored.
-	<br>
-	We opened a support ticket and it was immediately closed.
-	<br>
-	We reopened the support ticket and despite it remaining open, we continue to be ignored.
-	<br>
-	The lack of support and lack of response from RedminePRO is very disappointing and frankly, pathetic.
-	<br>
-	As a result of our experience with RedminePRO, we unfortunately cannot recommend their services and we urge all to avoid and seek out 
-	alternative service providers.
-	<br>
-	Our experience with RedminePRO and its lack of care towards clients serves as a prime example of why Harmonious Platform Systems was 
-	created, why we strive to be 100% free of big tech and to be entirely independent, hosting all of our technology in-house.
-	<br>
-	We do not yet have the available resources in-house to be hosting Redmine on our network, therefore we have been forced to use 
-	third-party service provider, Atlassian, at this time.
-	</em>
-	</p>
+	<p style="font-size:50%;">-------------------------<br>
+	<a href="archive-2022.html">News Archive 2022</a></p>
 
-	<p style="border:3px; border-style:solid; border-color:gold; padding:1em; font-size:50%;">
-	<em><b>June 24, 2022</b><br>
-	<br>
-	We have successfully upgraded Gobble Chain to version 3.0.
-	<br>
-	This was not anticipated and come as a result of some very unexpected circumstances.
-	<br>
-	Late yesterday the blockchain crashed because of technical reasons that were unforeseen and of which we never developed for.
-	<br>
-	We had recently introduced a new backup mechanism which duplicated the current running blockchain into an archive of its own.
-	<br>
-	Initially things looked promising but we seriously misjudged just how quickly the running blockchain grows and equally misjudged how 
-	quickly disk space would be consumed by duplicating it for archival, without any compression.
-	<br>
-	It was primarily the lack of disk storage space on the server which caused the entire blockchain to stop functioning and effectively 
-	break.
-	<br>
-	It was an oversight which we readily admit should not have happened and that is on us.
-	<br>
-	This morning we were forced to dump version 2.0 entirely and quickly adopt version 3.0, and make some necessary changes to see it 
-	implemented with confidence.
-	<br>
-	It has been a complete success.
-	<br>
-	Version 3.0 of Gobble Chain replicates the exact same behavior as its predecessor, but with some critical modifications.
-	<br>
-	The amount of disk space its predecessor consumed had become unmanageable for the resources that we have and to be honest, it was just 
-	unnecessarily bloated by design - something we never understood, until yesterday.
-	<br>
-	Version 3.0 introduces a much leaner design, functions much lighter by using a half-load data addition model to the blockchain while using 
-	less system resources, consumes so much less disk space and introduces a brand new compressed archival feature.
-	<br>
-	The new blockchain is now operational and running successfully.
-	<br>
-	The changes have no effect on current investments of CMDC and its values, which all remains unchanged by the implementation of this new 
-	version.
-	<br>
-	So, as we said, this update comes much earlier than we anticipated, but we were presented with an immediate challenge and are proud of 
-	what we have been able to do to meet that challenge.
-	</em>
-	</p>
-	
-	<p style="border:3px; border-style:solid; border-color:gold; padding:1em; font-size:50%;">
-	<em><b>June 14, 2022</b><br>
-	<br>
-	Mozilla Firefox has been certified for use with Harmonious Platform Systems.
-	<br>
-	The two candidates for certification were Mozilla Firefox and Brave Browser.
-	<br>
-	This was a challenging decision for us, considering both candidates are respectable web browsers.
-	<br>
-	Mozilla Firefox has been certified over Brave Browser on the basis that we feel Mozilla, through Firefox and as an organization, 
-	is more dedicated to the freedom movement than what Brave Browser is.
-	<br>
-	This is no way negates any efforts that Brave Browser has made and continues to make, especially with its focus on security and 
-	privacy, but we feel their intentions are more focused towards improving their own products and services rather than the freedom 
-	movement as a whole.
-	<br>
-	We actually considered certifying both candidates, however, we definitely feel more work needs to be done with Brave Browser to 
-	reach the point where we are completely satisfied it can be certified for use with Harmonious Platform Systems.
-	<br>
-	Because we have not yet reached that point of satisfaction, Brave Browser will not be certified at this time.
-	<br>
-	We will continue to monitor the development progress of Brave Browser and if significant improvements are made we are open to 
-	certify its use in the future.
-	</em>
-	</p>
-
-	<p style="border:3px; border-style:solid; border-color:gold; padding:1em; font-size:50%;">
-	<em><b>May 15, 2022</b><br>
-	<br>
-	We are currently reviewing the "Harmonious Access Browser" component of the specification.
-	<br>
-	We had plans to ship a custom web browser with modifications made specifically to suit the Harmonious Platform.
-	<br>
-	However, after much consideration we have decided that shipping a custom browser is both unnecessary and negated by the fact that 
-	good web browsers already exist that already function well with Harmonious Platform.
-	<br>
-	In place of shipping a custom web browser, we'd like to endorse an existing web browser and certify it's compatibility with 
-	Harmonious Platform.
-	<br>
-	We have not yet finalized which web browser we will certify, but both Mozilla Firefox and Brave Browser remain the two most likely 
-	candidates.
-	</em>
-	</p>
-	
-	<p style="border:3px; border-style:solid; border-color:gold; padding:1em; font-size:50%;">
-	<em><b>April 30, 2022</b><br>
-	<br>
-	IPFire has been certified for use with Harmonious Platform Systems.
-	</em>
-	</p>
-	
-	<p style="border:3px; border-style:solid; border-color:gold; padding:1em; font-size:50%;">
-	<em><b>April 28, 2022</b><br>
-	<br>
-	We have updated the Certification page.
-	<br>
-	Our internal certification program is now fully operational.
-	<br>
-	Initial certified software includes:
-	<br>
-	- Ubuntu 22.04 LTS<br>
-	- Ubuntu 20.04 LTS<br>
-	- Fedora 35<br>
-	- Tumbleweed<br>
-	- Windows Server<br>
-	- Windows 11<br>
-	Upcoming releases of Fedora 36 and OpenSUSE Leap 15.4 are pending and will be assessed post-release.
-	</em>
-	</p>
-
-	<p style="border:3px; border-style:solid; border-color:gold; padding:1em; font-size:50%;">
-	<em><b>March 25, 2022</b><br>
-	<br>
-	We have added two new Gateways and viADDR databases which are acting parents to a new sub-hub configuration.
-	<br>
-	Although extremely complex, the new databases add better capability and flexibility to our existing viADDR configuration.
-	</em>
-	</p>
-
-	<p style="border:3px; border-style:solid; border-color:gold; padding:1em; font-size:50%;">
-	<em><b>March 25, 2022</b><br>
-	<br>
-	Pouch has been updated to version 1.1 Beta 2.
-	<br>
-	This is not a feature release, instead fixes many bugs.
-	</em>
-	</p>
-	
-	<p style="border:3px; border-style:solid; border-color:gold; padding:1em; font-size:50%;">
-	<em><b>March 25, 2022</b><br>
-	<br>
-	We have successfully upgraded Gobble Chain to version 2.0.
-	<br>
-	It was updated on-the-fly, running processes switched to new binaries and no downtime.
-	<br>
-	Complete success.
-	</em>
-	</p>
-
-	<p style="border:3px; border-style:solid; border-color:gold; padding:1em; font-size:50%;">
-	<em><b>March 6, 2022</b><br>
-	<br>
-	Due to an extreme weather event, today a number of our servers were knocked offline for a brief moment.
-	<br>
-	This was a partial blackout affecting non-critical servers only.
-	<br>
-	Critical servers which keep our platform online were unaffected and used backup power supplies.
-	<br>Uptime remains at 100%.</em>
-	</p>
-
-	<p style="border:3px; border-style:solid; border-color:gold; padding:1em; font-size:50%;">
-	<em><b>February 16, 2022</b><br>
-	<br>
-	We have commissioned new hardware running Windows Server.
-	<br>
-	Our new server will be added to our existing configuration and complement operations running as a file server.</em>
-	</p>
-
-	<p style="border:3px; border-style:solid; border-color:gold; padding:1em; font-size:50%;">
-	<em><b>February 13, 2022</b><br>
-	<br>
-	Site updated to version 2.4.3.
-	<br>
-	No major changes. Minor changes only, including small visual tweaks.</em>
-	</p>
-
-	<p style="border:3px; border-style:solid; border-color:gold; padding:1em; font-size:50%;">
-	<em><b>February 10, 2022</b><br>
-	<br>
-	We have completed our investigation into a recent security breach that we detected.
-	<br>
-	The breach has now been contained and all systems on Harmonious Platform Systems network are now 
-	secure.
-	<br>
-	The breach was not as severe as we anticipated and was limited to one web browser being hijacked 
-	on the Mainframe.
-	<br>
-	The web browser has been returned to default settings and reconfigured successfully, eliminating 
-	the threat.
-	<br>
-	As a precaution, our proxy server has been assessed and traffic analyzed.
-	<br>
-	The proxy server was not affected.
-	<br>
-	This investigation is now closed.</em>
-	</p>
-	
-	<p style="border:3px; border-style:solid; border-color:gold; padding:1em; font-size:50%;">
-	<em><b>February 8, 2022</b><br>
-	<br>
-	***** IMPORTANT! *****
-	<br>
-	We are currently investigating a security breach which has penetrated our network.
-	<br>
-	Our initial assessment points to a Mainframe breach.
-	<br>
-	This is both good and bad.
-	<br>
-	The good news is it means that it may be limited to one system and can be restricted to the intranet.
-	<br>
-	The bad news is it makes it more difficult to investigate the entry point the breach has occurred.
-	<br>
-	More information will be posted to the website when we complete our investigation.</em>
-	</p>
-	
-	<p style="border:3px; border-style:solid; border-color:gold; padding:1em; font-size:50%;">
-	<em><b>January 16, 2022</b><br>
-	<br>
-	L-CERT Standard Version 1.0 has been finalized and approved.</em>
-	</p>
-
-	<p style="border:3px; border-style:solid; border-color:gold; padding:1em; font-size:50%;">
-	<em><b>December 13, 2021</b><br>
-	<br>
-	Soul v1.0.1 has been released.
-	<br>
-	KEEP UP! v0.1 has been released.</em>
-	</p>
-
-	<p style="border:3px; border-style:solid; border-color:gold; padding:1em; font-size:50%;">
-	<em><b>December 1, 2021</b><br>
-	<br>
-	Harmonious Platform Systems now officially supports:<br>
-	- Tumbleweed<br>
-	- Ubuntu 21.04<br>
-	- Fedora 35<br>
-	- Windows 11<br>
-	</em>
-	</p>
-	
-	<p style="border:3px; border-style:solid; border-color:gold; padding:1em; font-size:50%;">
-	<em><b>November 17, 2021</b><br>
-	<br>
-	We are continuing our testing of Soul v1.0.1 Beta. Release date has been delayed. It is now scheduled to ship on December 13, 2021.
-	<br>
-	We are continuing testing of KEEP UP!. Release date has been delayed. It is now scheduled to ship on December 13, 2021.</em>
-	</p>
-
-	<p style="border:3px; border-style:solid; border-color:gold; padding:1em; font-size:50%;">
-	<em><b>October 19, 2021 #2</b><br>
-	<br>
-	We are aware that the network navigation section of the website has problems rendering as intended on some web browsers. We are 
-	looking into a better way to design this component and it will be corrected in the near future. This is a low priority.</em>
-	</p>
-
-	<p style="border:3px; border-style:solid; border-color:gold; padding:1em; font-size:50%;">
-	<em><b>October 19, 2021 #1</b><br>
-	<br>
-	We are currently testing two important components - Soul and KEEP UP! Both of these components are scheduled to ship on November 15, 
-	2021.</em>
-	</p>
-
-	<p style="border:3px; border-style:solid; border-color:gold; padding:1em; font-size:50%;">
-	<em><b>September 30, 2021</b><br>
-	<br>
-	Pitrix v2.4.2 has been released. All global allocations are now active.</em>
-	</p>
-
-	<p style="border:3px; border-style:solid; border-color:gold; padding:1em; font-size:50%;">
-	<em><b>September 10, 2021</b><br>
-	<br>
-	After a long period of heavy development on Pitrix, real progress has finally been made. We are currently in the final stages of
-	testing and debugging in preparation for shipping later in the month. Assuming no serious issues are determined, Pitrix should ship as
-	scheduled on September 30. Until this time, all Pitrix global allocations will remain inactive.</em>
-	</p>
+	<p style="font-size:50%;"><a href="archive-2021.html">News Archive 2021</a></p>
 <br>
 	<font color="gold"><div align="left" style="font-size:50%">
 		<p><a href="http://www.harmoniousplatformsystems.website">Public website</a> is licensed under Creative Commons 
